--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
       "json-server, heroku, node, REST API"
    ],
    "author": "Agustín Gomez",
-   "license": "ISC"
-   
+   "license": "ISC",
+   "dependencies":{
+      "json-server": "^0.17.0"
+   }
 }
